# pg_activity

./: .codespellrc  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.txt  RELEASE.md  constraints.txt  mypy.ini  pg_activity  pg_top  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
debian/: changelog  control  copyright  pydist-overrides  rules
docs/: Makefile
docs/man/: build-man.sh  install-man.sh  pg_activity.1  pg_activity.pod
docs/source/: conf.py  index.rst
pgactivity/: Data.py  Data.sql  Process.py  UI.py  __init__.py  __main__.py  activities.py  cli.py  colors.py  compat.py  config.py  data.py  handlers.py  keys.py  parser.py  pg.py  psycopg_utils.py  types.py  ui.py  utils.py  views.py  widgets.py
pgactivity/profiles/: minimal.conf  narrow.conf  wide.conf
pgactivity/queries/: __init__.py  disable_log_min_duration_sample.sql  disable_log_min_duration_statement.sql  disable_log_statement.sql  do_pg_cancel_backend.sql  do_pg_terminate_backend.sql  get_active_connections.sql  get_active_connections_post_90200.sql  get_blocking.sql  get_blocking_oldest.sql  get_blocking_post_090200.sql  get_blocking_post_090600.sql  get_blocking_post_140000.sql  get_blocking_post_90200.sql  get_blocking_post_90600.sql  get_data_directory.sql  get_db_info.sql  get_pg_activity.sql  get_pg_activity_oldest.sql  get_pg_activity_post_090200.sql  get_pg_activity_post_090400.sql  get_pg_activity_post_090600.sql  get_pg_activity_post_100000.sql  get_pg_activity_post_110000.sql  get_pg_activity_post_130000.sql  get_pg_activity_post_140000.sql  get_pg_activity_post_90200.sql  get_pg_activity_post_90600.sql  get_pga_inet_addresses.sql  get_pid_file.sql  get_replication_slots_post_140000.sql  get_server_info.sql  get_server_info_oldest.sql  get_server_info_post_090000.sql  get_server_info_post_090100.sql  get_server_info_post_090200.sql  get_server_info_post_090400.sql  get_server_info_post_090600.sql  get_server_info_post_100000.sql  get_server_info_post_110000.sql  (+20 more)
tests/: conftest.py  test_UI.py  test_activities.py  test_cli.py  test_cli.txt  test_cli_help.txt  test_cli_help_py312.txt  test_cli_help_py38.txt  test_config.py  test_data.py  test_scroll.txt  test_types.py  test_ui.txt  test_views.py  test_views.txt  test_widgets.txt  tests.py
tests/data/: local-processes-input.json
