[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-activity"
dynamic = ["version"]
description = "Command line tool for PostgreSQL server activity monitoring."
readme = "README.md"
license = "PostgreSQL"
requires-python = ">=3.9"
authors = [
    { name = "Julien Tachoires", email = "julmon@gmail.com" },
    { name = "Benoit Lobréau", email = "benoit.lobreau@dalibo.com" },
    { name = "Denis Laxalde", email = "denis.laxalde@dalibo.com" },
    { name = "Dalibo", email = "contact@dalibo.com" },
]
maintainers = [
    { name = "Denis Laxalde", email = "denis.laxalde@dalibo.com" },
    { name = "Benoit Lobréau", email = "benoit.lobreau@dalibo.com" },
]
keywords = [
    "activity",
    "cli",
    "monitoring",
    "postgresql",
    "sql",
    "top",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "attrs >= 17.4, !=21.1",
    "blessed >= 1.15.0",
    "humanize >= 0.5.1, !=4.12.0",
    "psutil >= 2.0.0",
]

[project.optional-dependencies]
dev = [
    "pg-activity[psycopg,psycopg2,testing,typing]",
    "black >= 24.10.0",
    "check-manifest",
    "codespell",
    "flake8",
    "isort",
    "pre-commit",
    "pyupgrade",
]
typing = [
    "mypy",
    "types-psutil >= 5.9.5.15",
    "types-psycopg2",
    "types-setuptools",
]
psycopg = [
    "psycopg[binary] >= 3.1",
]
psycopg2 = [
    "psycopg2-binary >= 2.8",
]
testing = [
    "psycopg[binary]",
    "pytest",
    "pytest-postgresql >= 4.0",
]

[project.scripts]
pg_activity = "pgactivity.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/dalibo/pg_activity/issues/"
Changelog = "https://github.com/dalibo/pg_activity/blob/master/CHANGELOG.md"
Homepage = "https://github.com/dalibo/pg_activity"
"Source code" = "https://github.com/dalibo/pg_activity/"

[tool.setuptools.dynamic]
version = { attr = "pgactivity.__version__" }

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
